--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,38 @@
     <header>
       <!--шапка-->
     </header>
-    <main>
+    <main class="page-body">
+      <section class="main-area">
+        <div class="wrapper">
+          <div class="wysiwyg-wrapper">
+            <!-- код WYSIWYG радактора -->
+            <h1></h1>
+            <h2></h2>
+            <p></p>
+            <p></p>
+            <h3></h3>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <h3></h3>
+            <p></p>
+            <blockquote></blockquote>
+          </div>
 
+        </div>
+      </section>
+      <section class="order">
+        <div class="wrapper">
+          <!-- секция с формой -->
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="wrapper">
+          <!-- секция с отзывами -->
+        </div>
+      </section>
     </main>
     <footer>
       <!--футер-->
