--- a/source/index.html
+++ b/source/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>INTERIOR LOUNGE — дизайн общественных пространств</title>
   </head>
-  <body>
+  <body class="body">
     <header>
       <!--шапка-->
     </header>
@@ -18,30 +15,46 @@
         <div class="wrapper">
           <div class="wysiwyg-wrapper">
             <!-- код WYSIWYG радактора -->
-            <h1></h1>
-            <h2></h2>
-            <p></p>
-            <p></p>
-            <h3></h3>
+            <h1>Дизайн общественных интерьеров</h1>
+            <h2>Кейс клубного дома Tomazzi Hall</h2>
+            <p>
+              Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу поставил перед собой девелопер Interior Lounge, продумывая клубный дом Tomazzi Hall. Над экстерьером комплекса работала команда одного из крупнейших архитектурных  Бюро России — «Студия 11» разработал концепцию, а мы оформили интерьер 10 парадных и 3 лаунж-зон.
+            </p>
+            <p>
+              Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил дизайн парадных и лаунж-зон нам. Основными моментами, на которые мы оринтировались, стали:
+            </p>
             <ul>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>
+                Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих двадцатых»;
+              </li>
+              <li>
+                Необходимо было выдержать дорогой и одновременно элегантный стиль;
+              </li>
+              <li>
+                Ключевой элемент дизайна любого общественного пространства — удобство для жителей.
+              </li>
             </ul>
-            <h3></h3>
-            <p></p>
-            <blockquote></blockquote>
+            <h3>Начало работы и источники вдохновения</h3>
+            <p>
+              Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России — «Студия 11», а мы оформили интерьер 10 парадных и 3 лаунж-зон.
+              Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил дизайн парадных и лаунж-зон нам.
+            </p>
+            <blockquote>
+              «Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то необычное. Сделать некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».
+            </blockquote>
           </div>
 
         </div>
       </section>
       <section class="order">
         <div class="wrapper">
+          <h3>Оставить отзыв</h3>
           <!-- секция с формой -->
         </div>
       </section>
       <section class="reviews">
         <div class="wrapper">
+          <h3>Отзывы</h3>
           <!-- секция с отзывами -->
         </div>
       </section>
