--- a/source/index.html
+++ b/source/index.html
@@ -54,16 +54,34 @@
       </section>
       <section class="reviews">
         <div class="wrapper">
-          <h3>Отзывы</h3>
+          <h3 class="visually-hidden">Отзывы</h3>
           <!-- секция с отзывами -->
           <div class="reviews__wrapper">
             <div class="review">
-              <img src="#" alt="" class="review__image" width="50" height="50">
+              <img src="img/Ivan.png" alt="" class="review__image" width="50" height="50">
               <p class="review__name">
                 Иван Грачев
               </p>
               <p class="review__text">
                 Очень самобытный и необычный проект.
+              </p>
+            </div>
+            <div class="review">
+              <img src="img/Maria.png" alt="" class="review__image" width="50" height="50">
+              <p class="review__name">
+                Мария Рачинская
+              </p>
+              <p class="review__text">
+                Мне особенно понравилось решение лестничных клеток. Кружки вообще очень стильные!
+              </p>
+            </div>
+            <div class="review">
+              <img src="img/Sveta.png" alt="" class="review__image" width="50" height="50">
+              <p class="review__name">
+                Светлана
+              </p>
+              <p class="review__text">
+                Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты скоро будут не только в частных домах, но и в кафе, музеях, театрах. Я бы сходила!
               </p>
             </div>
           </div>
