--- a/source/index.html
+++ b/source/index.html
@@ -53,13 +53,22 @@
           <div class="order-form">
             <div class="wpcf7">
               <form action="" class="wpcf7-form">
-                <div class="order-form__column-wrapper">
-                  <div class="order-form__column-item">
+                <div class="order-form__wrapper">
+                  <div class="order-form__item">
+                    <div class="cf7md-item">
+                      <textarea class="wpcf7-text" placeholder="Расскажите, что вы думаете о проекте"></textarea>
+                    </div>
   
                   </div>
-                  <div class="order-form__column-item">
-  
+                  <div class="order-form__item">
+                    <div class="cf7md-item">
+                      <input type="text" class="wpcf7-text" placeholder="Ваше имя">
+                    </div>
                   </div>
+                </div>
+                <div class="order-form__submit-wrapper">
+                  <button class="wpcf7-submit">Отправить</button>
+                  <p class="order-form__text">Отзыв будет добавлен после проверки модератором</p>
                 </div>
               </form>
             </div>
